2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient wouldn't die until the new window which mlclient created dies. Fixed.
	  (Thanks to Nanashi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient accepts "pty_list" and "/dev/..." as the 1st argument.
	  If "pty_list" is specified, mlclient outputs pty lists which are opened.
	  If "/dev/..." is specified, a new window is opened with the specified pty.

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Renamed -P/--ptys/ptys option to -@/--screens/startup_screens, and
	  added -P/--ptys/startup_ptys option.
	* Added ESC [ 5379 ; select_pty = <dev name> ; BEL and
	  ESC [ 5380 ; pty_list = <dev name> ; BEL
	* Added PTY selection menu to mlconfig.

2003-2-9 Araki Ken <arakiken@users.sf.net>

	* Added zh_TW locale messages to mlconfig.
	  (Thanks to Yaun-Chen Cheng)

2003-2-9 Araki Ken <arakiken@users.sf.net>

	* If you pressed 'U' and 'Z' with arabic kbd, nothing output. Fixed.

2003-2-8 Araki Ken <arakiken@users.sf.net>

	* mlconfig saves configurations in ~/.mlterm/main if OK button pressed.

2003-2-5 MINAMI Hirokazu <minami@chem.s.u-tokyo.ac.jp> 
	
	* Added support for depth 8 PseudoColor in gdkpixbuf
	  image processing module. 
	
2003-2-3 Araki Ken <arakiken@users.sf.net>

	* Fixed a bug of cursor fg/bg colors.
	* Fixed arguments of ml_iscii_new_lang().
	  (Thanks to Sakamoto Hironori san)

2003-2-2 Araki Ken <arakiken@users.sf.net>

	* Added -9/--crfg/cursor_fg_color,-0/--crbg/cursor_bg_color options.
	  These options specify foreground/background colors of the cursor.
	  If not specified, cursor fg color is default bg color, and vice versa.

2003-2-2 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed a bug in alloc_closest_xcolor_pseudo(). (diff_r -> diff_b)
	  (Thanks to Hirokazu Minami san)

2003-2-2 Araki Ken <arakiken@users.sf.net>

	* Added EXT_KBD shortcut in ~/.mlterm/key.
	  This shortcut activate or deactivate arabic or iscii input method.

2003-2-2 Araki Ken <arakiken@users.sf.net>
